<resources>
    <string name="app_name">GauchoSell</string>
    <string name="g_logo">G</string>
    <string name="home">Home</string>
    <string name="string">+</string>
    <string name="gauchosell">GauchoSell</string>
    <string name="settings">Settings</string>
    <string name="homeButton">home</string>
    <string name="myitemsButton">myItems</string>
    <string name="bidsButton">Bids</string>
    <string name="likeButton">like</string>
    <string name="searchbutton">searchButton</string>
    <string name="plusbutton">plusButton</string>

    <!-- Create account authentication dialog -->
    <string name="loading_text">Loading...</string>

    <!-- Not sure if we're going to use this
    <string name="authentication_text">Authenticating…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string> -->

    <!-- Sign up text -->
    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="month_placeholder">Month</string>
    <string name="year_placeholder">Year</string>
    <string name="email_placeholder">youremail@email.com</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_pw_placeholder">Confirm Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="or_signup">or</string>
    <string name="facebook_signup_button">Sign Up with Facebook</string>

    <!-- Post Item text -->
    <string name="post_item_logo">-Post a New Item-</string>
    <string name="post_item_name">Item Name</string>
    <string name="post_item_description">Item Description</string>
    <string name="category">Category</string>
    <string name="price">Price</string>


    <string name="check_inbox_text">Please check your inbox for your password</string>
    <string name="invalid_email_error">%s is not a valid E-mail.</string>
    <string name="username_error_empty">Username field is empty.</string>

    <string name="successful_authentication">Successfully logged in. </string>
    <string name="email_password_invalid">Authentication failed. </string>


    <!--category choices for postItem -->
    <string-array name="categories">
        <item>Accessories</item>
        <item>Books</item>
        <item>Clothing-Men\'s</item>
        <item>Clothing-Women\'s</item>
        <item>Cosmetics</item>
        <item>Electronics</item>
        <item>Event Tickets</item>
        <item>Food</item>
        <item>Furniture</item>
        <item>Housing</item>
        <item>Kitchen Appliances</item>
        <item>Miscellaneous</item>
    </string-array>

    <!--category choices for postItem -->
    <string-array name="categories_home">
        <item>No Category</item>
        <item>Accessories</item>
        <item>Books</item>
        <item>Clothing-Men\'s</item>
        <item>Clothing-Women\'s</item>
        <item>Cosmetics</item>
        <item>Electronics</item>
        <item>Event Tickets</item>
        <item>Food</item>
        <item>Furniture</item>
        <item>Housing</item>
        <item>Kitchen Appliances</item>
        <item>Miscellaneous</item>
    </string-array>

    //names for uploadImage Dialog Box
    <string name="UploadImageDialogTitle">Would you like to take a picture or upload
                                            an existing photo?</string>
    <string name="takePhoto">Take Photo</string>
    <string name="uploadImage">Upload Image</string>

    <string name="my_account">MY ACCOUNT</string>
    <string name="email_text">Email</string>

    <string name="empty_field_error">Field cannot be empty.</string>


</resources>
