<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cs48.g05.bbc2016.gauchosell.SettingsActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/g_logo"
            android:id="@+id/g_logo"
            android:textColor="#000000"
            android:textSize="35sp"
            android:paddingLeft="0dp"
            android:paddingRight="240dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings"
            android:id="@+id/settings_logo"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:id="@+id/my_account_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_________________________________________________"
            android:id="@+id/line"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Profile Picture"
            android:id="@+id/profile_picture" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profilePicture_edit"
            android:src="@drawable/noimage"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/first_name_placeholder"
            android:id="@+id/first_name_edit" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="GET FIRST NAME"
            android:ems="10"
            android:id="@+id/first_name_edit_field"
            android:editable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/last_name_placeholder"
            android:id="@+id/last_name_edit" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="GET LAST NAME"
            android:ems="10"
            android:id="@+id/last_name_edit_field"
            android:editable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/username_placeholder"
            android:id="@+id/username_name_edit" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="GET USERNAME"
            android:ems="10"
            android:id="@+id/username_edit_field"
            android:editable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email_text"
            android:id="@+id/email_edit" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="GET EMAIL"
            android:ems="10"
            android:id="@+id/email_edit_field"
            android:editable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password_placeholder"
            android:id="@+id/password_edit" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_placeholder"
            android:ems="10"
            android:id="@+id/password_edit_field" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Confirm Password"
            android:id="@+id/confirmPassword_edit" />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Confirm Password"
            android:ems="10"
            android:id="@+id/confirmPassword_edit_field" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:id="@+id/save_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Out"
            android:id="@+id/logout_button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>
