<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs48.g05.bbc2016.gauchosell.HomeActivity"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000033ff"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:id="@+id/notificationsButton"
                android:src="@drawable/notifications"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="#00ffffff" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="135dp"
            android:layout_height="match_parent">

            <Spinner
                android:layout_width="125dp"
                android:layout_height="24dp"
                android:id="@+id/spinner_home"
                android:spinnerMode="dropdown"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:text="Filter"
                android:id="@+id/category_button"
                android:background="#73d0f4"
                android:layout_gravity="center_horizontal"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/add_post"
                android:src="@drawable/add"
                android:background="#00ffffff"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />
        </LinearLayout>


    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Logo"
        android:smoothScrollbar="true"
        android:scrollingCache="false"
        android:animationCache="false"
        android:fastScrollEnabled="false"
        android:fastScrollAlwaysVisible="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/listView"
        android:background="#00ffffff"
        android:gravity="bottom">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/home_button"
            android:src="@drawable/home_button2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/homeButton"
            android:padding="5dp" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/myitems_folder"
            android:src="@drawable/folder"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:contentDescription="@string/myitemsButton" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/mybids_button"
            android:src="@drawable/mybids_button"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:contentDescription="@string/bidsButton"
            android:baselineAlignBottom="true" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/like_button"
            android:src="@drawable/like_button2"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:contentDescription="@string/likeButton" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/settings_button"
            android:src="@drawable/settings_button2"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:contentDescription="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/listView">

    </LinearLayout>
</LinearLayout>
